--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "a": "^2.1.2",
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
